# Gene-Designer

./: .fasta  DENV3_H288Y_000000.D00000001  DENV3_H288Y_000000.V99990001  DENV3_H288Y_000000.ali  DENV3_H288Y_000000.ini  DENV3_H288Y_000000.rsr  DENV3_H288Y_000001.ali  KnotSeeker.py  RNAeval  asfta.fasta  build_re_db.py  codon_usage.db  codon_usage_db.py  enz_ref.html  eric_test-fragments.fasta  eric_test.fasta  genedesign.py  help.html  help.py  homology.py  input.fasta  linkers.db  linkers_db.py  load_template.html  model.py  mutations.html  new_rna.fna.ct  old_rna.fna.ct  pdb.py  pknotsRG  re.db  rna_folding.py  rna_format_conversion.py  setup.py  template_db.py  templates.db  thermodynamic_data.py  tmp.fasta  vectors.db  vectors.html  (+1 more)
ViennaRNA-1.8.4/: Makefile  config.h  config.status
ViennaRNA-1.8.4/Cluster/: Makefile
ViennaRNA-1.8.4/H/: Makefile
ViennaRNA-1.8.4/Kinfold/: Kinfold  Makefile  config.status
ViennaRNA-1.8.4/Kinfold/Example/: Makefile
ViennaRNA-1.8.4/Perl/: Makefile  Makefile.perl
ViennaRNA-1.8.4/Progs/: Makefile  RNALfold  RNAaliduplex  RNAalifold  RNAcofold  RNAdistance  RNAduplex  RNAfold  RNAheat  RNAinverse  RNApaln  RNApdist  RNAplfold  RNAplot  RNAsubopt  RNAup
ViennaRNA-1.8.4/Progs/.deps/: RNAfold.Po
ViennaRNA-1.8.4/RNAforester/: Makefile  config.status
ViennaRNA-1.8.4/RNAforester/g2-0.70/: Makefile  config.status
ViennaRNA-1.8.4/Utils/: Makefile  b2ct  b2mt.pl  cmount.pl  coloraln.pl  colorrna.pl  ct2b.pl  dpzoom.pl  mountain.pl  popt  refold.pl  relplot.pl  rotate_ss.pl
ViennaRNA-1.8.4/lib/: Makefile
ViennaRNA-1.8.4/man/: Makefile
guugle/: Makefile  guugle  guugle.c  manual.txt
pknotsRG-1.3/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
pknotsRG-1.3/man/: Makefile  Makefile.am  Makefile.in  pknotsRG.1
pknotsRG-1.3/src/: Makefile  Makefile.am  Makefile.in  adplib.c  adplib.h  intloop11.c  intloop21.c  intloop22.c  options.h  pk-enf-so-nd.c  pk-enf-so.c  pk-enf.c  pk-loc-so-nd.c  pk-loc-so.c  pk-loc.c  pk-mfe-so-nd.c  pk-mfe-so.c  pk-mfe.c  pknotsRG-man.c  pknotsRG.c  pknotsRG.h  rnalib.c  rnalib.h
(+34 files in other folders)
