bin_PROGRAMS = pknotsRG
pknotsRG_SOURCES = pknotsRG.c pknotsRG.h options.h \
                   adplib.c adplib.h rnalib.h rnalib.c \
                   pk-enf-so-nd.c  pk-enf.c        pk-loc-so.c  pk-mfe-so-nd.c  pk-mfe.c \
                   pk-enf-so.c     pk-loc-so-nd.c  pk-loc.c     pk-mfe-so.c

pknotsRG_LDADD   = -lm

EXTRA_pknotsRG_SOURCES =  pknotsRG-man.c intloop11.c intloop21.c intloop22.c
